--- a/app/components/community/views/index.pug
+++ b/app/components/community/views/index.pug
@@ -1,105 +1,99 @@
-extends ../../common/layout
+extends ../../common/main
 block content
-    nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.align-self-center
-        button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContents" aria-controls="navbarContents" aria-expanded="false" aria-label="Toggle navigation")
-            span.navbar-toggler-icon
-        a.navbar-brand(href="/") Community
-        #navbarContents.collapse.navbar-collapse.justify-content-between
-            .navbar-nav
-                a(class="nav-item" href="#") Home
-            .navbar-nav
-                a.nav-link.dropdown-toggle.transparent.btn-transparent(href="#" id="navbarProfileDropdown" data-toggle="dropdown", aria-haspopup="true" aria-expanded="false")
-                    img(src="https://randomuser.me/api/portraits/men/65.jpg", class="avatar rounded-circle", alt="MikeS") 
-                    | #{session.username}
-                .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarProfileDropdown")
-                    a(class="dropdown-item" href="#") Edit Profile
-                    a(class="dropdown-item" href="#") Settings
-                    .dropdown-divider
-                    a(class="dropdown-item" href="" id="logout") Logout
-
-            
-    #content.h-100
-        .continer-fluid.h-100
-            .row.no-gutters.h-100
-                #messageContainer.col-lg-10.col-md-10.col-sm-10
-                    ul#messages
-                .col-lg-2.bg-light.col-md-2.col-sm-2
-                    div#userList.p-2
-    footer.bg-dark
-        form(action='./', method='post', id='chatForm')
-            .container-fluid.no-gutters
-                .row.no-gutters
-                    .col-lg-10.p-2.col-md-10.col-sm-10
-                        input(id='txt', class='form-control' autocomplete='off', autofocus='on', placeholder='Type your message here...')
-                    .col-lg-2.p-2.col-md-2.col-sm-2
-                        button(class='btn btn-primary btn-block') Send
-
+    .container
+        .row.justify-content-center
+            .card.get-started-card.shadow.p-3.mb-5.bg-white.rounded(style="max-width: 400px;")
+                .card-body
+                    .card-title
+                        h5.font-weight-bold Join a community
+                    .card-text
+                        p.mb-2 Enter in the invite code, you should have received this by email 
+                            |  or by a friend.
+                            form#join-community.form-inline(action="#")
+                                .col-auto.p-0
+                                    input.form-control.mb-2(type="text", placeholder="Invite Code")
+                                .col-auto.p-2
+                                    button.btn.btn-primary.mb-2(type="submit") Join
+                .card-body
+                    .card-title
+                        h5.font-weight-bold Create a community
+                    .card-text
+                        p#community_name_validator.alert.alert-danger(style="display:none")
+                        p.mb-2 Enter in the name of your community
+                            form#community_name_form.form-inline(action="#")
+                                .col-auto.p-0
+                                    input#community_name.form-control.mb-2(type="text", placeholder="Community Name")
+                                .col-auto.p-2
+                                    button#create-community.btn.btn-primary.mb-2(type="submit") Create
+    
     script.
         let host_url = '#{ host }';
-        let socket = io.connect(host_url);
-        let channel = '#{ channel }';
-        let chatName = '#{session.username}'
-
-        socket.on('connect', function(){
-            socket.emit('adduser', chatName, channel);
-        })
-
-        socket.on('updatechat', function(username, data){
-            $('#messages').append($('<li>').html('<small>'+ getFormattedDate() + '</small> <b>'+username+'</b>: ' + data));
-            $('#messageContainer').animate({
-                scrollTop: $("#messages li").last().offset().top
-            },
-            1000);
-        })
-
-        socket.on('updateusers', function(usernames) {
-            
-            $('#userList').html('');
-            $.each(usernames, function(key, val){
-                $('#userList').append($('<div id="val">').html(val));
-            })
-        });
-
-        $('form').submit(function(e) {
+        $('#community_name_form').submit(function(e) {
             e.preventDefault();
-            let txt = ($('#txt').val());
-            if (txt.trim() == "")
-                return;
+           console.log("Trying to submit.");
+
+            $('#community_name_validator').hide();
+            $('#community_name_validator').html('');
+
+            let communityName =  $('#community_name').val().trim();
+            console.log("community name: " + communityName);
+            if (communityName == "") {
                 
-            socket.emit('sendchat', txt);
-            $('#txt').val('');
-
-            return false;
-        });
-
-        function getFormattedDate() {
-            var date = new Date();
-            var str = date.getHours() + ":" + date.getMinutes();
-
-            return str;
-        }
-
-        $('#logout').click(function(e){
+                $('#community_name_validator').show();
+                $('#community_name_validator').html('Enter in a valid name');
+                return false;
+            }
             
-            e.preventDefault();
-            
+            let data = { 'community_name': communityName }
+            console.log("About to submit " +host_url );
             $.ajax({
                 type: 'POST',
-                url: '//' + host_url + '/users/logout',
-                contentType:  'application/json; charset=utf-8',
-                data: JSON.stringify({ 'logout': true }),
+                url: '//' + host_url + '/community/check_name',
+                contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
-                success: function(response){
+                data: JSON.stringify(data),
+                success: function(response) {
+                    console.log('response: ' + response);
                     if (response.status == 'ok') {
-                        window.location.replace('//' + host_url + '/')
+                        if(response.valid) {
+                            window.location = '/community/room/' + response.community_id;
+                        } else {
+                           $('#community_name_validator').show();
+                           $('#community_name_validator').html("Community name taken");
+                        }
                     }
                     else {
                         
                     }
                 },
-                failure: function(error) {
-                    $('.invalid-feedback').html('Username Taken');
-                    $('#email').addClass('is-invalid');
+                error: function(error) {
+
+                }
+            })
+        })
+        $('#join_community').click(function(e){
+            e.preventDefault();
+            console.log('click.');
+            $.ajax({
+                type: 'POST',
+                url: '//' + host_url + '/users/join-community',
+                contentType:  'application/json; charset=utf-8',
+                dataType: 'json',
+                data: JSON.stringify({ 'join': true }),
+                success: function(response) {
+                    console.log('Success. ' + JSON.stringify(response));
+                    if (response.status == 'error') {
+                       $('#form-alert').show();
+                       $('#form-alert').html("Invalid Username/Password");
+                    }
+                    else {
+                        console.log('trying to redirect.');
+                        window.location.replace('//' + host_url + '/community/room/' + response.community)
+                    }
+                },
+                error: function(error) {
+                    $('#form-alert').show();
+                    $('#form-alert').html("Unknown error: try again");
                 }
             });
         });
