--- a/app/components/community/views/modals/invite_modal.pug
+++ b/app/components/community/views/modals/invite_modal.pug
@@ -8,6 +8,6 @@
             .modal-body
                 p Copy and paste the invite link to your friends
                 textarea(type="textarea" class="form-control")
-                    | http:// #{ host }/invitation/#{invite_code}
+                    | http://#{ host }/community/invitation/#{invite_code}
             .modal-footer
                 button(type="button" class="btn btn-secondary" data-dismiss="modal") Close
