--- a/app/components/community/views/index.pug
+++ b/app/components/community/views/index.pug
@@ -56,7 +56,7 @@ block content
                 url: '//' + host_url + '/community/check_name',
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
-                data: JSON.stringify(data),s
+                data: JSON.stringify(data),
                 success: function(response) {
                     console.log('response: ' + response);
                     if (response.status == 'ok') {
