--- a/app/components/users/views/index.pug
+++ b/app/components/users/views/index.pug
@@ -93,7 +93,7 @@ block content
 
             $.ajax({
                 type: 'POST',
-                url: '/users/create',
+                url: '//' + host_url + '/users/create',
                 contentType:  'application/json; charset=utf-8',
                 dataType: 'json',
                 data: JSON.stringify({ 'username': email, 'password': password, 'room': room }),
