--- a/app/components/common/layout.pug
+++ b/app/components/common/layout.pug
@@ -1,5 +1,10 @@
 doctype html
 html
+	meta(charset='utf-8')
+	meta(http-equiv='X-UA-Compatible', content='IE=edge')
+	title
+	meta(name='description', content='')
+	meta(name='viewport', content='width=device-width, initial-scale=1')
 	head
 		link(href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
 		link(href='/static/css/global.css', rel='stylesheet')
