--- a/app/components/community/views/chatroom.pug
+++ b/app/components/community/views/chatroom.pug
@@ -22,7 +22,10 @@ block content
     #content.h-100
         .continer-fluid.h-100
             .row.no-gutters.h-100
-                #messageContainer.col-lg-10.col-md-10.col-sm-10
+                #communityList.col-lg-2.col-md-2.col-sm-2
+                    h5#communityListHeading Communities
+                    ul#communities
+                #messageContainer.col-lg-8.col-md-8.col-sm-8
                     ul#messages
                 .col-lg-2.bg-light.col-md-2.col-sm-2
                     div#userList.p-2
