--- a/app/components/community/views/chatroom.pug
+++ b/app/components/community/views/chatroom.pug
@@ -23,7 +23,8 @@ block content
         .continer-fluid.h-100
             .row.no-gutters.h-100
                 #communityList.col-lg-2.col-md-2.col-sm-2
-                    h5#communityListHeading Communities
+                    #communityListHeading.p-2
+                       b Communities
                     ul#communities
                 #messageContainer.col-lg-8.col-md-8.col-sm-8
                     ul#messages
