--- a/app/components/community/views/chatroom.pug
+++ b/app/components/community/views/chatroom.pug
@@ -22,7 +22,7 @@ block content
     #content.h-100
         .continer-fluid.h-100
             .row.no-gutters.h-100
-                #communityList.col-lg-1.col-md-1.col-sm-1
+                #communityList.col-lg-1.col-md-1.col-sm-1.bg-light
                     #communityListHeading.p-2
                        b Communities
                     ul#communities
