Cleaned up the invite flow. now users/communities have a many to many relationship

--- a/app/components/community/views/chatroom.pug
+++ b/app/components/community/views/chatroom.pug
@@ -64,6 +64,13 @@ block content
             })
         });
 
+        socket.on('updatecommunities', function(communities) {
+            $('#communities').html('');
+            $.each(usernames, function(key, val){
+                $('#communities').append($('<div id="val">').html(val));
+            })
+        });
+
         $('form').submit(function(e) {
             e.preventDefault();
             let txt = ($('#txt').val());
