--- a/app/components/community/views/index.pug
+++ b/app/components/community/views/index.pug
@@ -30,19 +30,18 @@ block content
     script.
         let host_url = '#{ host }';
 
-        
-
-        $('#community_name_form').submit(function(e) {
+        $('#community_name_form').submit(function(e)
+        {
             e.preventDefault();
            console.log("Trying to submit.");
 
             resetValidatorLabel('#community_name_validator');
 
             let invite_code = $('#invite_code').val().trim();
-
             let communityName =  $('#community_name').val().trim();
-            console.log("community name: " + communityName);
-            if (communityName == "") {
+
+            if (communityName == "")
+            {
                 
                 $('#community_name_validator').show();
                 $('#community_name_validator').html('Enter in a valid name');
@@ -50,81 +49,82 @@ block content
             }
             
             let data = { 'community_name': communityName }
-            console.log("About to submit " +host_url );
             $.ajax({
                 type: 'POST',
-                url: '//' + host_url + '/community/check_name',
+                url: '//' + host_url + '/community/create_community',
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
                 data: JSON.stringify(data),
-                success: function(response) {
+                success: function(response)
+                {
                     console.log('response: ' + response);
-                    if (response.status == 'ok') {
-                        if(response.valid) {
+                    if (response.status == 'ok')
+                    {
+                        if(response.valid)
+                        {
                             window.location = '/community/room/' + response.community_id;
-                        } else {
+                        }
+                        else
+                        {
                            $('#community_name_validator').show();
                            $('#community_name_validator').html("Community name taken");
                         }
                     }
-                    else {
-                        
-                    }
                 },
-                error: function(error) {
+                error: function(error) 
+                {
 
                 }
             })
         });
 
-
-        $('#join-community').submit(function(e) {
-
+        $('#join-community').submit(function(e)
+        {
             e.preventDefault();
 
             resetValidatorLabel('#invite_code_validator');
 
-            let invite_code = $('#invite_code').val().trim();
+            let invite = $('#invite_code').val();
 
-            if (invite_code == "" || invite_code.length != 8)
+            if (invite == "" || invite.length != 8)
             {
                 $('#invite_code_validator').html('Please enter a valid code');
                 $('#invite_code_validator').show();
-
                 return;
             }
 
-            console.log('click.');
+            var data = { "invite_code": invite };
 
             $.ajax({
-                type: 'POST',
-                url: '//' + host_url + '/community/join-community',
-                contentType:  'application/json; charset=utf-8',
+                 type: 'POST',
+                url: '//' + host_url + '/community/join',
+                contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
-                data: JSON.stringify({ 'invite_code' : invite_code }),
-                success: function(response) {
-                    console.log('Success. ' + JSON.stringify(response));
-
+                data: JSON.stringify(data),
+                success: function(response) 
+                {
                     resetValidatorLabel('#invite_code_validator');
 
-                    if (response.status == 'error') {
-
+                    if (response.status == 'error')
+                    {
                         $('#invite_code_validator').html('Error, invalid invite code');
                         $('#invite_code_validator').show();
                     }
-                    else {
-                        console.log('trying to redirect.');
-                        window.location = host_url + '/community/room/' + response.community_id
+                    else
+                    {
+                        window.location = '//' + host_url + '/community/room/' + response.community_id;
                     }
                 },
-                error: function(error) {
+                error: function(error)
+                {
                     $('#form-alert').show();
                     $('#form-alert').html("Unknown error: try again");
                 }
             });
         });
 
-        function resetValidatorLabel(elementID) {
+        function resetValidatorLabel(elementID)
+        {
             $(elementID).hide();
             $(elementID).html('');
         }
