--- a/app/components/common/navigation.pug
+++ b/app/components/common/navigation.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light.align-self-center.bg-info
+nav.navbar.navbar-expand-md.navbar-light.bg-light.align-self-center.bg-info
     .container
         button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContents" aria-controls="navbarContents" aria-expanded="false" aria-label="Toggle navigation")
             span.navbar-toggler-icon
