--- a/app/components/default/index.pug
+++ b/app/components/default/index.pug
@@ -1,51 +1,10 @@
 extends ../common/main
 block content
     .position-relative.overflow-hidden.p-3.p-md-5.m-md-5.bg-light
-            .col-md-6.p-lg-6.mx-auto.my-6
+            .col-lg-6.p-lg-6.mx-auto.my-6
                 h1.display-4.font-weight-bold Welcome to Community!
                 p.lead.font-weight-normal Create a community, invite your friends, and grow into a modern civilization
                 a.btn.btn-outline-secondary(href="/get-started") Get Started
     footer.footer.bg-info
         .container
             span.text-white Create, Gather and Grow your prosporous community.
-    script.
-
-        let host_url = '#{ host }';
-        
-        $('form').submit(function(e) {
-            e.preventDefault();
-            
-            let email = ($('#email').val()).trim();
-            let password = $('#password').val();
-            
-            if (email == "" || password == "")
-            {
-                $('#form-alert').show();
-                $('#form-alert').html("Username/Password can't be blank");
-                return false;
-            }
-            
-            $('#form-alert').hide();
-            $('#form-alert').html('');
-
-            $.ajax({
-                type: 'POST',
-                url: '//' + host_url + '/users/login',
-                contentType:  'application/json; charset=utf-8',
-                dataType: 'json',
-                data: JSON.stringify({ 'username': email, 'password': password }),
-                success: function(response) {
-                    if (response.status == 'error') {
-                       $('#form-alert').show();
-                       $('#form-alert').html("Invalid Username/Password");
-                    }
-                    else {
-                         window.location.replace('//' + host_url + '/users/join-community')
-                    }
-                },
-                failure: function(error) {
-                    $('#form-alert').show();
-                    $('#form-alert').html("Unknown error: try again");
-                }
-            });
-        });
