--- a/app/components/community/views/modals/invite_modal.pug
+++ b/app/components/community/views/modals/invite_modal.pug
@@ -1,5 +1,5 @@
 #inviteModal.modal.fade(tabindex="-1" role="dialog" aria-labelledby="inviteModal" aria-hidden="true")
-    .modal-dialog(role="document")
+    .modal-dialog.modal-dialog-centered(role="document")
         .modal-content
             .modal-header
                 h5.modal-title#inviteModalTitle Invite Codes
