--- a/app/components/community/views/chatroom.pug
+++ b/app/components/community/views/chatroom.pug
@@ -25,23 +25,25 @@ block content
     #content.h-100
         .continer-fluid.h-100
             .row.no-gutters.h-100
-                #communityList.col-lg-2.col-md-2.col-sm-2.bg-light
+                #communityList.col-2.bg-light(style="min-width:100px")
                     #communityListHeading.p-2
                         b Communities
                         ul#communities
-                #messageContainer.col-lg-8.col-md-8.col-sm-8
+                #messageContainer.col-8
                     div#messages.container
-                .col-lg-2.bg-light.col-md-2.col-sm-2
+                .col-2.bg-light(style="min-width:100px")
                     #memberListHeading.p-2
-                        b Members
-                        div#userList.p-2
+                        div Online
+                        div#userListOnline.p-2
+                        div Offline
+                        div#userListOffline.p-2
     footer.bg-dark
         form(action='./' method='post' id='chatForm')
             .container-fluid.no-gutters
                 .row.no-gutters
-                    .col-lg-10.p-2.col-md-10.col-sm-10
+                    .col-10.p-2
                         input(id='txt' class='form-control' autocomplete='off', autofocus='on', placeholder='Type your message here...')
-                    .col-lg-2.p-2.col-md-2.col-sm-2
+                    .col-2.p-2
                         button(class='btn btn-primary btn-block') Send
     script.
         let host_url = '#{ host }';
@@ -57,8 +59,6 @@ block content
 
         socket.on('updatechat', function(username, data) 
         {
-            console.log('last : ' + lastUser + ' cur: ' + username);
-            //Check if last chat message was same user, if so just br and add message.
             if (lastUser != username)
             {
                 if (username == "Tom")
@@ -78,7 +78,6 @@ block content
             {
                 $('#messages div.'+username+'_message:last').append('<br />' + data);
             }
-            
            
             $('#messageContainer').animate({
                 scrollTop: $("#messages div").last().offset().top - 50
@@ -89,9 +88,9 @@ block content
         })
 
         socket.on('updateusers', function(usernames) {
-            $('#userList').html('');
+            $('#userListOnline').html('');
             $.each(usernames, function(key, val){
-                $('#userList').append($('<div id="'+val+'">').html(val));
+                $('#userListOnline').append($('<div id="'+val+'">').html(val));
             })
         });
         
@@ -143,7 +142,6 @@ block content
                     success: function(response) {
                         if (response.status == 'ok') 
                         {
-                            console.log("status was ok");
                             getUserCommunities();
                             $('#joinModal').modal('hide')
                         }
